--- a/pom.xml
+++ b/pom.xml
@@ -16,12 +16,12 @@
   </properties>
 
   <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>4.11</version>
-      <scope>test</scope>
-    </dependency>
+<!--     <dependency> -->
+<!--       <groupId>junit</groupId> -->
+<!--       <artifactId>junit</artifactId> -->
+<!--       <version>4.11</version> -->
+<!--       <scope>test</scope> -->
+<!--     </dependency> -->
 
     <dependency>
       <groupId>javax.servlet</groupId>
@@ -29,11 +29,11 @@
       <version>1.2</version>
     </dependency>
 
-    <dependency>
-      <groupId>log4j</groupId>
-      <artifactId>log4j</artifactId>
-      <version>1.2.17</version>
-    </dependency>
+<!--     <dependency> -->
+<!--       <groupId>log4j</groupId> -->
+<!--       <artifactId>log4j</artifactId> -->
+<!--       <version>1.2.17</version> -->
+<!--     </dependency> -->
   </dependencies>
 
   <build>
